Seperate files out into folders

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
     <script src="src/module.js"></script>
+    <script src="src/github/github.ctrl.js"></script>
+    <script src="src/github/github.svc.js"></script>
 </body>
 </html>
