--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
     </ul>
     
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-    <script src="src/module.js"></script>
-    <script src="src/github/github.ctrl.js"></script>
-    <script src="src/github/github.svc.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
